# gnd-dashboard

./: .gitignore  README.md  pyproject.toml
dashboard/: gnd-app.py  requirements.txt
data/: gnd_systematik_Ts.csv
scripts/: gnd.py  title.py
stats/: 2022-01-03-Ts-count.csv  2022-01-04-Ts-count.csv  2022-01-05-Ts-count.csv  2022-01-06-Ts-count.csv  2022-01-07-Ts-count.csv  2022-01-10-Ts-count.csv  gnd_classification_Ts_all.csv  gnd_classification_all.csv  gnd_classification_top10.csv  gnd_codes_all.csv  gnd_codes_top10.csv  gnd_created_at.csv  gnd_entity_count.csv  gnd_entity_types.csv  gnd_relation_count.csv  gnd_systematik.csv  gnd_systematik_Ts.csv  title_count.csv  title_gnd_links.csv  title_gnd_links_auto.csv  title_gnd_links_ext.csv  title_gnd_links_unique.csv  title_gnd_mean.csv  title_gnd_mean_Tb.csv  title_gnd_mean_Tf.csv  title_gnd_mean_Tg.csv  title_gnd_mean_Tp.csv  title_gnd_mean_Ts.csv  title_gnd_mean_Tu.csv  title_gnd_newcomer_top10.csv  title_gnd_newcomer_top10_Tb.csv  title_gnd_newcomer_top10_Tf.csv  title_gnd_newcomer_top10_Tg.csv  title_gnd_newcomer_top10_Tp.csv  title_gnd_newcomer_top10_Ts.csv  title_gnd_newcomer_top10_Tu.csv  title_gnd_top10.csv  title_gnd_top10_Tb.csv  title_gnd_top10_Tf.csv  title_gnd_top10_Tg.csv  (+3 more)
