[tool.poetry]
name = "gnd-dashboard"
version = "0.1.0"
description = ""
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "CC0-1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

